fixed publication folder bug

--- a/content/publication/ying-2019-kaozhouyang/cite.bib
+++ b/content/publication/ying-2019-kaozhouyang/cite.bib
@@ -1,15 +1,15 @@
 @article{Ying2019Kaozhouyang,
- author = {应, 锐 and 蒋, 力 and 尹, 芳敏 and 黄, 建荣 and 黎, 祖福 and 王, 英永 and 冯, 建祥},
+ author = {Ying, Rui and Jiang, Li and Yin, Fangmin and Huang, Jianrong and Li, Zufu and Wang, Yingyong and Feng, Jianxiang},
  copyright = {All rights reserved},
  doi = {10.12131/20190009},
- file = {应 等。 - 2019 - 基于刺网、地笼的考洲洋游泳动物群落结构和多样性分析.pdf:files/1828/应 等。 - 2019 - 基于刺网、地笼的考洲洋游泳动物群落结构和多样性分析.pdf:application/pdf},
  issn = {2095-0780},
- journal = {南方水产科学},
- language = {中文;},
+ journal = {South China Fisheries Science},
+ language = {zh-CN},
  pages = {1},
- title = {基于刺网、地笼的考洲洋游泳动物群落结构和多样性分析},
- url = {http://www.schinafish.cn//article/id/34102a04-93d4-4fee-85bc-4069db614635},
+ title = {Analysis of community structure and diversity of nekton in Kaozhouyang Bay using gill nets and cages},
  volume = {15},
  year = {2019}
 }
+
+
 
