--- a/publications.bib
+++ b/publications.bib
@@ -1,4 +1,4 @@
-@article{YingTrophicStrucutreFunctional,
+@article{ying-trophic-2020,
   title = {Trophic structure and functional diversity reveal pelagic-benthic coupling dynamic in the coastal ecosystem of Daya Bay, China},
   journal = {Ecological Indicators},
   volume = {113},
@@ -7,12 +7,12 @@
   issn = {1470-160X},
   doi = {10.1016/j.ecolind.2020.106241},
   url = {http://www.sciencedirect.com/science/article/pii/S1470160X20301783},
-  author = {Ying, Rui and Cao, Yiting and Yin, Fangmin and Guo, Jianlin and Huang, Jianrong and Wang, Yingyong and Zheng, Lianming and Wang, Junxing and Liang, Haoliang and Li, Zufu and Feng, Jianxiang",
+  author = {Ying, Rui and Cao, Yiting and Yin, Fangmin and Guo, Jianlin and Huang, Jianrong and Wang, Yingyong and Zheng, Lianming and Wang, Junxing and Liang, Haoliang and Li, Zufu and Feng, Jianxiang"},
   keywords = {Pelagic-benthic coupling, Offshore ecosystem, Trophic niche, Stable isotope analysis, Functional diversity, Daya Bay},
   abstract = {Offshore marine areas have diverse habitats and food sources which lead to dynamic exchanges of nutrients and energy between different water layers. Coupling of energy pathways is related to both physical (e.g., sedimentation) and biological (e.g., predation) processes. However, due to the biological processes affected by human influences, the variability and dynamics of this coupling are not well quantified. Daya Bay, a subtropical semi-closed gulf affected by human activities, was studied to assess dynamics of pelagic-benthic coupling affected by trophical interaction. Stable isotope analyses of three main functional groups (pelagic fish, demersal fish, and benthic crustaceans) were conducted to assess trophic interactions, and trait-based functional indices were calculated to reveal the changes of community structure. The environmental variations, including chlorophyll a concentration, phytoplankton, and zooplankton abundance were monitored to explain the potential causes. The results showed that pelagic-benthic coupling effects were strong and seasonally dynamic in Daya Bay. Most nekton organisms were largely (>55%) fueled by pelagic production and exhibited high trophic overlap. In spring, when resources were limited, the proportion of the pelagic contribution to all the groups was highest, while greater trophic partitioning was observed. The trait-based functional diversity indices showed that the functional richness is extremely low in all seasons. However, the functional evenness and dispersion indices increased from winter to spring to summer. Our observation suggests that plankton abundance caused this seasonal pattern by controlling the strength of competitive interactions. Our study highlights the dynamic of pelagic-benthic coupling strength caused by trophic interaction across different environmental conditions of coastal ecosystems, this might provide important sighting on the coastal food web study and fishery management.}
 }
 
-@article{Ying2019FittingMethodsSeasonality,
+@article{ying-fitting-2019,
   title = {Fitting Methods and Seasonality Effects on the Assessment of Pelagic Fish Communities in {{Daya Bay}}, {{China}}},
   volume = {103},
   copyright = {All rights reserved},
@@ -24,11 +24,10 @@
   month = aug,
   year = {2019},
   keywords = {Size spectra,Daya Bay,Maximum likelihood estimation,Migration,Nonlinearity,Seasonality},
-  pages = {346-354},
-  file = {/Users/yingrui/Zotero/storage/ZCS3WABM/S1470160X19302882.html}
+  pages = {346-354}
 }
 
-@article{Jiang2019IndividualCombinedEffects,
+@article{jiang-individual-2019,
   title = {Individual and Combined Effects of Ammonia-{{N}} and Sulfide on the Immune Function and Intestinal Microbiota of {{Pacific}} White Shrimp {{Litopenaeus}} Vannamei},
   volume = {92},
   copyright = {All rights reserved},
@@ -44,7 +43,7 @@
   file = {/Users/yingrui/Zotero/storage/TQ4LUXE6/S1050464819306679.html}
 }
 
-@article{Feng2019EffectsInvasiveSpartina,
+@article{feng-effects-2019,
   title = {Effects of {{Invasive Spartina}} Alterniflora {{Loisel}}. and {{Subsequent Ecological Replacement}} by {{Sonneratia}} Apetala {{Buch}}.-{{Ham}}. on {{Soil Organic Carbon Fractions}} and {{Stock}}},
   volume = {10},
   copyright = {http://creativecommons.org/licenses/by/3.0/},
@@ -58,17 +57,16 @@
   year = {2019},
   keywords = {biological invasion,biological replacement,mangrove,soil microbial biomass carbon,soil organic carbon,soil water dissolved carbon},
   pages = {171},
-  file = {/Users/yingrui/Zotero/storage/U5HWI272/Feng et al. - 2019 - Effects of Invasive Spartina alterniflora Loisel. .pdf;/Users/yingrui/Zotero/storage/ZZ4DFJ32/171.html}
 }
 
-@article{Ying2018ShiChunHeHaiMaChiDuiHaiShuiYangZhiShuiTiDeDanYiJiXieTongJingHuaXiaoGuo,
+@article{ying-2018-haimachi,
   title = {{Single and synergistic effects of Ulva lactuca and sesuvium portulacastrum on the purification of mariculture wastewater}},
   volume = {37},
   copyright = {All rights reserved},
   issn = {1000-4890},
   lccn = {21-1148/Q},
   abstract = {为探究水生植物对海水养殖水体的净化作用以及不同水生植物之间的协同净化效果,本研究开展了石莼单一处理、海马齿单一处理以及海马齿与石莼协同处理海水养殖水体实验。结果表明:不同种植密度的石莼均可显著改善水质,其中2.0 g{$\cdot$}L\textasciitilde{}(-1)的种植密度最为合适,处理12 d后,对COD、无机磷、铵氮和总氮的去除率分别达到41.7\%、76.9\%、81.8\%和67.2\%;不同种植密度的海马齿同样显著改善水质,其中4.8 g{$\cdot$}L\textasciitilde{}(-1)的种植密度最为合适,在处理12 d后,对COD、无机磷、铵氮和总氮的去除率分别达到49.0\%、20.8\%、98.5\%和55.9\%;海马齿与石莼协同处理对COD、无机磷、铵氮和总氮的去除率分别达到了36.7\%、100.0\%、100.0\%和88.8\%,表明不同类型水生植物混合种植能够有效提高其对养殖水体的净化能力。本研究表明,石莼及海马齿均能改善养殖水体水质,且适当的密度与合理的搭配能够有效促进植物修复效果。},
-  language = {en},
+  language = {zh-CN},
   number = {09},
   journal = {Chinese Journal of Ecology},
   author = {Ying, Rui and Chen, Jingfang and Gao, Shanshan and Li, Zufu and Feng, Jianxiang},
@@ -77,12 +75,12 @@
   pages = {2745-2753}
 }
 
-@article{Ying2019Kaozhouyang,
+@article{ying-2019-kaozhouyang
   title = {{Analysis of community structure and diversity of nekton in Kaozhouyang Bay using gill nets and cages}},
   volume = {15},
   copyright = {All rights reserved},
   issn = {2095-0780},
-  language = {en},
+  language = {zh-CN},
   journal = {South China Fisheries Science},
   doi = {10.12131/20190009},
   author = {Ying, Rui and Jiang, Li and Yin, Fangmin and Huang, Jianrong and Li, Zufu and Wang, Yingyong and Feng, Jianxiang},
