re-generate publication folders

--- a/content/publication/ying-analysis-community-structure-2019/cite.bib
+++ b/content/publication/ying-analysis-community-structure-2019/cite.bib
@@ -1,4 +1,4 @@
-@article{Ying2019Kaozhouyang,
+@article{yingAnalysisCommunityStructure2019,
  author = {Ying, Rui and Jiang, Li and Yin, Fangmin and Huang, Jianrong and Li, Zufu and Wang, Yingyong and Feng, Jianxiang},
  copyright = {All rights reserved},
  doi = {10.12131/20190009},
@@ -10,6 +10,4 @@
  volume = {15},
  year = {2019}
 }
-
-
 
