--- a/content/publication/ying-fitting-methods-seasonality-2019/cite.bib
+++ b/content/publication/ying-fitting-methods-seasonality-2019/cite.bib
@@ -1,9 +1,9 @@
-@article{ying_fitting_2019,
+@article{yingFittingMethodsSeasonality2019,
  abstract = {The general relationship indicating that biomass decreases with individual body size is referred to as size spectra. This is consistent with the power law that characterizes size frequency distributions. While many previous studies have used the estimated exponent in size spectra as a metric to assess external perturbations, limited empirical studies have focused on the fitting methods. Here, we compared the effects caused by fitting methods and distribution models based on one-year pelagic fish data from Daya Bay, China. Our empirical results showed that maximum likelihood estimation (MLE) is more suitable than traditional normalized biomass spectra (NBS), and that a power law is not always the best model when using MLE. Moreover, we found significant size structure variation in different seasons. Principal component analysis (PCA) and linear mixed effects model (LMM) results showed that temperature was the major factor in seasonal environmental variation, and fish migration might be the essential response strategy causing size structure changes. The estimated exponents and nonlinear structure indicated that the Daya Bay is under intensive human impact. Our results suggest that MLE methods are recommended in future size-based studies, and that environmental variation and migration patterns are crucial in understanding seasonal community structure changes.},
  author = {Ying, Rui and Yin, Fangmin and Jiang, Li and Li, Zufu and Huang, Jianrong and Wang, Yingyong and Lu, Jianguo and Feng, Jianxiang},
  copyright = {All rights reserved},
  doi = {10.1016/j.ecolind.2019.04.042},
- file = {Ying 等。 - 2019 - Fitting methods and seasonality effects on the ass.pdf:files/1831/Ying 等。 - 2019 - Fitting methods and seasonality effects on the ass.pdf:application/pdf},
+ file = {Ying 等。 - 2019 - Fitting methods and seasonality effects on the ass.pdf:C\:\\Users\Łeslie_Ying\\Zotero\\storage\\822PPVYT\\Ying 等。 - 2019 - Fitting methods and seasonality effects on the ass.pdf:application/pdf},
  issn = {1470-160X},
  journal = {Ecological Indicators},
  keywords = {Size spectra, Daya Bay, Maximum likelihood estimation, Migration, Nonlinearity, Seasonality},
