--- a/publications.bib
+++ b/publications.bib
@@ -1,91 +1,102 @@
-@article{ying-trophic-2020,
-  title = {Trophic structure and functional diversity reveal pelagic-benthic coupling dynamic in the coastal ecosystem of Daya Bay, China},
-  journal = {Ecological Indicators},
-  volume = {113},
-  pages = {106241},
-  year = {2020},
-  issn = {1470-160X},
-  doi = {10.1016/j.ecolind.2020.106241},
-  url = {http://www.sciencedirect.com/science/article/pii/S1470160X20301783},
-  author = {Ying, Rui and Cao, Yiting and Yin, Fangmin and Guo, Jianlin and Huang, Jianrong and Wang, Yingyong and Zheng, Lianming and Wang, Junxing and Liang, Haoliang and Li, Zufu and Feng, Jianxiang"},
-  keywords = {Pelagic-benthic coupling, Offshore ecosystem, Trophic niche, Stable isotope analysis, Functional diversity, Daya Bay},
-  abstract = {Offshore marine areas have diverse habitats and food sources which lead to dynamic exchanges of nutrients and energy between different water layers. Coupling of energy pathways is related to both physical (e.g., sedimentation) and biological (e.g., predation) processes. However, due to the biological processes affected by human influences, the variability and dynamics of this coupling are not well quantified. Daya Bay, a subtropical semi-closed gulf affected by human activities, was studied to assess dynamics of pelagic-benthic coupling affected by trophical interaction. Stable isotope analyses of three main functional groups (pelagic fish, demersal fish, and benthic crustaceans) were conducted to assess trophic interactions, and trait-based functional indices were calculated to reveal the changes of community structure. The environmental variations, including chlorophyll a concentration, phytoplankton, and zooplankton abundance were monitored to explain the potential causes. The results showed that pelagic-benthic coupling effects were strong and seasonally dynamic in Daya Bay. Most nekton organisms were largely (>55%) fueled by pelagic production and exhibited high trophic overlap. In spring, when resources were limited, the proportion of the pelagic contribution to all the groups was highest, while greater trophic partitioning was observed. The trait-based functional diversity indices showed that the functional richness is extremely low in all seasons. However, the functional evenness and dispersion indices increased from winter to spring to summer. Our observation suggests that plankton abundance caused this seasonal pattern by controlling the strength of competitive interactions. Our study highlights the dynamic of pelagic-benthic coupling strength caused by trophic interaction across different environmental conditions of coastal ecosystems, this might provide important sighting on the coastal food web study and fishery management.}
+
+@article{fengEffectsInvasiveSpartina2019,
+	title = {Effects of {Invasive} {Spartina} alterniflora {Loisel}. and {Subsequent} {Ecological} {Replacement} by {Sonneratia} apetala {Buch}.-{Ham}. on {Soil} {Organic} {Carbon} {Fractions} and {Stock}},
+	volume = {10},
+	copyright = {http://creativecommons.org/licenses/by/3.0/},
+	url = {https://www.mdpi.com/1999-4907/10/2/171},
+	doi = {10.3390/f10020171},
+	abstract = {Background and Objectives: The rapid spread of invasive Spartina alterniflora Loisel. in the mangrove ecosystems of China was reduced using Sonneratia apetala Buch.-Ham. as an ecological replacement. Here, we studied the effects of invasion and ecological replacement using S. apetala on soil organic carbon fractions and stock on Qi\&rsquo;ao Island. Materials and Methods: Seven sites, including unvegetated mudflat and S. alterniflora, rehabilitated mangroves with different ages (one, six, and 10 years) and mature native Kandelia obovata Sheue, Liu, and Yong areas were selected in this study. Samples in the top 50 cm of soil were collected and then different fractions of organic carbon, including the total organic carbon (TOC), particulate organic carbon (POC), soil water dissolved carbon (DOC) and microbial biomass carbon (MBC), and the total carbon stock were measured and calculated. Results: The growth of S. alterniflora and mangroves significantly increased the soil TOC, POC, and MBC levels when compared to the mudflat. S. alterniflora had the highest soil DOC contents at 0\&ndash;10 cm and 20\&ndash;30 cm and the one-year restored mangroves had the highest MBC content. S. alterniflora and mangroves both had higher soil total carbon pools than the mudflat. Conclusions: The invasive S. alterniflora and young S. apetala forests had significantly lower soil TOC and POC contents and total organic carbon than the mature K. obovata on Qi\&rsquo;ao Island. These results indicate that ecological replacement methods can enhance long term carbon storage in Spartina-invaded ecosystems and native mangrove species are recommended.},
+	language = {en},
+	number = {2},
+	urldate = {2019-07-31},
+	journal = {Forests},
+	author = {Feng, Jianxiang and Wang, Shugong and Wang, Shujuan and Ying, Rui and Yin, Fangmin and Jiang, Li and Li, Zufu},
+	month = feb,
+	year = {2019},
+	keywords = {biological invasion, biological replacement, mangrove, soil microbial biomass carbon, soil organic carbon, soil water dissolved carbon},
+	pages = {171},
+	file = {Feng 等。 - 2019 - Effects of Invasive Spartina alterniflora Loisel. .pdf:C\:\\Users\\Leslie_Ying\\Zotero\\storage\\KMBUNSND\\Feng 等。 - 2019 - Effects of Invasive Spartina alterniflora Loisel. .pdf:application/pdf}
 }
 
-@article{ying-fitting-2019,
-  title = {Fitting Methods and Seasonality Effects on the Assessment of Pelagic Fish Communities in {{Daya Bay}}, {{China}}},
-  volume = {103},
-  copyright = {All rights reserved},
-  issn = {1470-160X},
-  abstract = {The general relationship indicating that biomass decreases with individual body size is referred to as size spectra. This is consistent with the power law that characterizes size frequency distributions. While many previous studies have used the estimated exponent in size spectra as a metric to assess external perturbations, limited empirical studies have focused on the fitting methods. Here, we compared the effects caused by fitting methods and distribution models based on one-year pelagic fish data from Daya Bay, China. Our empirical results showed that maximum likelihood estimation (MLE) is more suitable than traditional normalized biomass spectra (NBS), and that a power law is not always the best model when using MLE. Moreover, we found significant size structure variation in different seasons. Principal component analysis (PCA) and linear mixed effects model (LMM) results showed that temperature was the major factor in seasonal environmental variation, and fish migration might be the essential response strategy causing size structure changes. The estimated exponents and nonlinear structure indicated that the Daya Bay is under intensive human impact. Our results suggest that MLE methods are recommended in future size-based studies, and that environmental variation and migration patterns are crucial in understanding seasonal community structure changes.},
-  journal = {Ecological Indicators},
-  doi = {10.1016/j.ecolind.2019.04.042},
-  author = {Ying, Rui and Yin, Fangmin and Jiang, Li and Li, Zufu and Huang, Jianrong and Wang, Yingyong and Lu, Jianguo and Feng, Jianxiang},
-  month = aug,
-  year = {2019},
-  keywords = {Size spectra,Daya Bay,Maximum likelihood estimation,Migration,Nonlinearity,Seasonality},
-  pages = {346-354}
+@article{jiangIndividualCombinedEffects2019,
+	title = {Individual and combined effects of ammonia-{N} and sulfide on the immune function and intestinal microbiota of {Pacific} white shrimp {Litopenaeus} vannamei},
+	volume = {92},
+	copyright = {All rights reserved},
+	issn = {1050-4648},
+	url = {http://www.sciencedirect.com/science/article/pii/S1050464819306679},
+	doi = {10.1016/j.fsi.2019.06.020},
+	abstract = {In this study, we explored the individual and combined effects of ammonia-N and sulfide stress (1 mg/L sulfide and 15 mg/L ammonia-N) on the oxidation resistance, immune response and intestinal health of Litopenaeus vannamei during 72 h exposure. The total antioxidant capacity (T-AOC), malonaldehyde (MDA) and nitric oxide (NO) content, superoxide dismutase (SOD) and catalase activity (CAT), the immune-relative gene (caspase-3, hsp70 and IMD) expression in hepatopancreas and intestine of L.vannamei and the intestinal microbiota were measured. The result showed that MDA and NO contents in hepatopancreas of L. vannamei in all treatment groups increased and remain were at high levels at the end of the stress exposure. The L. vannamei employ antioxidant defense system by increasing the activities of T-AOC, SOD and CAT enzymes in hepatopancereas and intestine to reduce oxidant damage. More severe damages with combined ammonia-N and sulfide stress to antioxidant systems were observed. The gene expression results also demonstrated that antioxidant capacity of L. vannamei was severely impaired and the apoptosis cell was initiated under the ammonia-N and sulfide stress. In addition, the environmental stress also reshaped the intestinal microbial community structure of L. vannamei that a number of original genera decreased, such as Cellvibrio, Vibrio and Rheinheimera; some new genera increased or appeared, such as Photobacterium in all treatment groups, Arcobacter and Fusibacter in sulfide stress group. Therefore, the health of L. vannamei was severely impacted when exposed to the stress of ammonia nitrogen and sulfide and these two factors can have weak synergic effects.},
+	urldate = {2019-07-31},
+	journal = {Fish \& Shellfish Immunology},
+	author = {Jiang, Li and Feng, Jianxiang and Ying, Rui and Yin, Fangmin and Pei, Surui and Lu, Jianguo and Cao, Yiting and Guo, Jianlin and Li, Zufu},
+	month = sep,
+	year = {2019},
+	keywords = {Ammonia and sulfide stress, Immune-relative gene expression, Intestinal microbiota, Oxidation resistance},
+	pages = {230--240},
+	file = {Jiang 等。 - 2019 - Individual and combined effects of ammonia-N and s.pdf:C\:\\Users\\Leslie_Ying\\Zotero\\storage\\SLBWXD5W\\Jiang 等。 - 2019 - Individual and combined effects of ammonia-N and s.pdf:application/pdf}
 }
 
-@article{jiang-individual-2019,
-  title = {Individual and Combined Effects of Ammonia-{{N}} and Sulfide on the Immune Function and Intestinal Microbiota of {{Pacific}} White Shrimp {{Litopenaeus}} Vannamei},
-  volume = {92},
-  copyright = {All rights reserved},
-  issn = {1050-4648},
-  abstract = {In this study, we explored the individual and combined effects of ammonia-N and sulfide stress (1 mg/L sulfide and 15 mg/L ammonia-N) on the oxidation resistance, immune response and intestinal health of Litopenaeus vannamei during 72 h exposure. The total antioxidant capacity (T-AOC), malonaldehyde (MDA) and nitric oxide (NO) content, superoxide dismutase (SOD) and catalase activity (CAT), the immune-relative gene (caspase-3, hsp70 and IMD) expression in hepatopancreas and intestine of L.vannamei and the intestinal microbiota were measured. The result showed that MDA and NO contents in hepatopancreas of L. vannamei in all treatment groups increased and remain were at high levels at the end of the stress exposure. The L. vannamei employ antioxidant defense system by increasing the activities of T-AOC, SOD and CAT enzymes in hepatopancereas and intestine to reduce oxidant damage. More severe damages with combined ammonia-N and sulfide stress to antioxidant systems were observed. The gene expression results also demonstrated that antioxidant capacity of L. vannamei was severely impaired and the apoptosis cell was initiated under the ammonia-N and sulfide stress. In addition, the environmental stress also reshaped the intestinal microbial community structure of L. vannamei that a number of original genera decreased, such as Cellvibrio, Vibrio and Rheinheimera; some new genera increased or appeared, such as Photobacterium in all treatment groups, Arcobacter and Fusibacter in sulfide stress group. Therefore, the health of L. vannamei was severely impacted when exposed to the stress of ammonia nitrogen and sulfide and these two factors can have weak synergic effects.},
-  journal = {Fish \& Shellfish Immunology},
-  doi = {10.1016/j.fsi.2019.06.020},
-  author = {Jiang, Li and Feng, Jianxiang and Ying, Rui and Yin, Fangmin and Pei, Surui and Lu, Jianguo and Cao, Yiting and Guo, Jianlin and Li, Zufu},
-  month = sep,
-  year = {2019},
-  keywords = {Ammonia and sulfide stress,Immune-relative gene expression,Intestinal microbiota,Oxidation resistance},
-  pages = {230-240},
-  file = {/Users/yingrui/Zotero/storage/TQ4LUXE6/S1050464819306679.html}
+@article{yingFittingMethodsSeasonality2019,
+	title = {Fitting methods and seasonality effects on the assessment of pelagic fish communities in {Daya} {Bay}, {China}},
+	volume = {103},
+	copyright = {All rights reserved},
+	issn = {1470-160X},
+	url = {http://www.sciencedirect.com/science/article/pii/S1470160X19302882},
+	doi = {10.1016/j.ecolind.2019.04.042},
+	abstract = {The general relationship indicating that biomass decreases with individual body size is referred to as size spectra. This is consistent with the power law that characterizes size frequency distributions. While many previous studies have used the estimated exponent in size spectra as a metric to assess external perturbations, limited empirical studies have focused on the fitting methods. Here, we compared the effects caused by fitting methods and distribution models based on one-year pelagic fish data from Daya Bay, China. Our empirical results showed that maximum likelihood estimation (MLE) is more suitable than traditional normalized biomass spectra (NBS), and that a power law is not always the best model when using MLE. Moreover, we found significant size structure variation in different seasons. Principal component analysis (PCA) and linear mixed effects model (LMM) results showed that temperature was the major factor in seasonal environmental variation, and fish migration might be the essential response strategy causing size structure changes. The estimated exponents and nonlinear structure indicated that the Daya Bay is under intensive human impact. Our results suggest that MLE methods are recommended in future size-based studies, and that environmental variation and migration patterns are crucial in understanding seasonal community structure changes.},
+	urldate = {2019-07-29},
+	journal = {Ecological Indicators},
+	author = {Ying, Rui and Yin, Fangmin and Jiang, Li and Li, Zufu and Huang, Jianrong and Wang, Yingyong and Lu, Jianguo and Feng, Jianxiang},
+	month = aug,
+	year = {2019},
+	keywords = {Size spectra, Daya Bay, Maximum likelihood estimation, Migration, Nonlinearity, Seasonality},
+	pages = {346--354},
+	file = {Ying 等。 - 2019 - Fitting methods and seasonality effects on the ass.pdf:C\:\\Users\\Leslie_Ying\\Zotero\\storage\\822PPVYT\\Ying 等。 - 2019 - Fitting methods and seasonality effects on the ass.pdf:application/pdf}
 }
 
-@article{feng-effects-2019,
-  title = {Effects of {{Invasive Spartina}} Alterniflora {{Loisel}}. and {{Subsequent Ecological Replacement}} by {{Sonneratia}} Apetala {{Buch}}.-{{Ham}}. on {{Soil Organic Carbon Fractions}} and {{Stock}}},
-  volume = {10},
-  copyright = {http://creativecommons.org/licenses/by/3.0/},
-  abstract = {Background and Objectives: The rapid spread of invasive Spartina alterniflora Loisel. in the mangrove ecosystems of China was reduced using Sonneratia apetala Buch.-Ham. as an ecological replacement. Here, we studied the effects of invasion and ecological replacement using S. apetala on soil organic carbon fractions and stock on Qi\&rsquo;ao Island. Materials and Methods: Seven sites, including unvegetated mudflat and S. alterniflora, rehabilitated mangroves with different ages (one, six, and 10 years) and mature native Kandelia obovata Sheue, Liu, and Yong areas were selected in this study. Samples in the top 50 cm of soil were collected and then different fractions of organic carbon, including the total organic carbon (TOC), particulate organic carbon (POC), soil water dissolved carbon (DOC) and microbial biomass carbon (MBC), and the total carbon stock were measured and calculated. Results: The growth of S. alterniflora and mangroves significantly increased the soil TOC, POC, and MBC levels when compared to the mudflat. S. alterniflora had the highest soil DOC contents at 0\&ndash;10 cm and 20\&ndash;30 cm and the one-year restored mangroves had the highest MBC content. S. alterniflora and mangroves both had higher soil total carbon pools than the mudflat. Conclusions: The invasive S. alterniflora and young S. apetala forests had significantly lower soil TOC and POC contents and total organic carbon than the mature K. obovata on Qi\&rsquo;ao Island. These results indicate that ecological replacement methods can enhance long term carbon storage in Spartina-invaded ecosystems and native mangrove species are recommended.},
-  language = {en},
-  number = {2},
-  journal = {Forests},
-  doi = {10.3390/f10020171},
-  author = {Feng, Jianxiang and Wang, Shugong and Wang, Shujuan and Ying, Rui and Yin, Fangmin and Jiang, Li and Li, Zufu},
-  month = feb,
-  year = {2019},
-  keywords = {biological invasion,biological replacement,mangrove,soil microbial biomass carbon,soil organic carbon,soil water dissolved carbon},
-  pages = {171},
+@article{yingSingleSynergisticEffects2018,
+	title = {Single and synergistic effects of {Ulva} lactuca and sesuvium portulacastrum on the purification of mariculture wastewater},
+	volume = {37},
+	copyright = {All rights reserved},
+	issn = {1000-4890},
+	url = {http://www.cnki.net/kcms/doi/10.13292/j.1000-4890.201809.014.html},
+	doi = {10.13292/j.1000-4890.201809.014},
+	language = {zh-CN},
+	number = {09},
+	urldate = {2019-07-31},
+	journal = {Chinese Journal of Ecology},
+	author = {Ying, Rui and Chen, Jingfang and Gao, Shanshan and Li, Zufu and Feng, Jiangxiang},
+	year = {2018},
+	keywords = {nitrogen and phosphorus nutrients, phytoremediation, Sesuvium portulacastrum, Ulva lactuca, water purification},
+	pages = {2745--2753}
 }
 
-@article{ying-2018-haimachi,
-  title = {{Single and synergistic effects of Ulva lactuca and sesuvium portulacastrum on the purification of mariculture wastewater}},
-  volume = {37},
-  copyright = {All rights reserved},
-  issn = {1000-4890},
-  lccn = {21-1148/Q},
-  abstract = {为探究水生植物对海水养殖水体的净化作用以及不同水生植物之间的协同净化效果,本研究开展了石莼单一处理、海马齿单一处理以及海马齿与石莼协同处理海水养殖水体实验。结果表明:不同种植密度的石莼均可显著改善水质,其中2.0 g{$\cdot$}L\textasciitilde{}(-1)的种植密度最为合适,处理12 d后,对COD、无机磷、铵氮和总氮的去除率分别达到41.7\%、76.9\%、81.8\%和67.2\%;不同种植密度的海马齿同样显著改善水质,其中4.8 g{$\cdot$}L\textasciitilde{}(-1)的种植密度最为合适,在处理12 d后,对COD、无机磷、铵氮和总氮的去除率分别达到49.0\%、20.8\%、98.5\%和55.9\%;海马齿与石莼协同处理对COD、无机磷、铵氮和总氮的去除率分别达到了36.7\%、100.0\%、100.0\%和88.8\%,表明不同类型水生植物混合种植能够有效提高其对养殖水体的净化能力。本研究表明,石莼及海马齿均能改善养殖水体水质,且适当的密度与合理的搭配能够有效促进植物修复效果。},
-  language = {zh-CN},
-  number = {09},
-  journal = {Chinese Journal of Ecology},
-  author = {Ying, Rui and Chen, Jingfang and Gao, Shanshan and Li, Zufu and Feng, Jianxiang},
-  year = {2018},
-  keywords = {nitrogen and phosphorus nutrients,phytoremediation,Sesuvium portulacastrum,Ulva lactuca,water purification},
-  pages = {2745-2753}
+@article{yingAnalysisCommunityStructure2019,
+	title = {Analysis of community structure and diversity of nekton in {Kaozhouyang} {Bay} using gill nets and cages},
+	volume = {15},
+	copyright = {All rights reserved},
+	issn = {2095-0780},
+	doi = {10.12131/20190009},
+	language = {zh-CN},
+	journal = {South China Fisheries Science},
+	author = {Ying, Rui and Jiang, Li and Yin, Fangmin and Huang, Jianrong and Li, Zufu and Wang, Yingyong and Feng, Jianxiang},
+	year = {2019},
+	pages = {1}
 }
 
-@article{ying-2019-kaozhouyang
-  title = {{Analysis of community structure and diversity of nekton in Kaozhouyang Bay using gill nets and cages}},
-  volume = {15},
-  copyright = {All rights reserved},
-  issn = {2095-0780},
-  language = {zh-CN},
-  journal = {South China Fisheries Science},
-  doi = {10.12131/20190009},
-  author = {Ying, Rui and Jiang, Li and Yin, Fangmin and Huang, Jianrong and Li, Zufu and Wang, Yingyong and Feng, Jianxiang},
-  year = {2019},
-  pages = {1}
+@article{yingTrophicStructureFunctional2020a,
+	title = {Trophic structure and functional diversity reveal pelagic-benthic coupling dynamic in the coastal ecosystem of {Daya} {Bay}, {China}},
+	volume = {113},
+	copyright = {All rights reserved},
+	issn = {1470-160X},
+	url = {http://www.sciencedirect.com/science/article/pii/S1470160X20301783},
+	doi = {10.1016/j.ecolind.2020.106241},
+	abstract = {Offshore marine areas have diverse habitats and food sources which lead to dynamic exchanges of nutrients and energy between different water layers. Coupling of energy pathways is related to both physical (e.g., sedimentation) and biological (e.g., predation) processes. However, due to the biological processes affected by human influences, the variability and dynamics of this coupling are not well quantified. Daya Bay, a subtropical semi-closed gulf affected by human activities, was studied to assess dynamics of pelagic-benthic coupling affected by trophical interaction. Stable isotope analyses of three main functional groups (pelagic fish, demersal fish, and benthic crustaceans) were conducted to assess trophic interactions, and trait-based functional indices were calculated to reveal the changes of community structure. The environmental variations, including chlorophyll a concentration, phytoplankton, and zooplankton abundance were monitored to explain the potential causes. The results showed that pelagic-benthic coupling effects were strong and seasonally dynamic in Daya Bay. Most nekton organisms were largely ({\textgreater}55\%) fueled by pelagic production and exhibited high trophic overlap. In spring, when resources were limited, the proportion of the pelagic contribution to all the groups was highest, while greater trophic partitioning was observed. The trait-based functional diversity indices showed that the functional richness is extremely low in all seasons. However, the functional evenness and dispersion indices increased from winter to spring to summer. Our observation suggests that plankton abundance caused this seasonal pattern by controlling the strength of competitive interactions. Our study highlights the dynamic of pelagic-benthic coupling strength caused by trophic interaction across different environmental conditions of coastal ecosystems, this might provide important sighting on the coastal food web study and fishery management.},
+	language = {en},
+	journal = {Ecological Indicators},
+	author = {Ying, Rui and Cao, Yiting and Yin, Fangmin and Guo, Jianlin and Huang, Jianrong and Wang, Yingyong and Zheng, Lianming and Wang, Junxing and Liang, Haoliang and Li, Zufu and Feng, Jianxiang},
+	year = {2020},
+	keywords = {Daya Bay, Functional diversity, Offshore ecosystem, Pelagic-benthic coupling, Stable isotope analysis, Trophic niche},
+	pages = {106241},
+	file = {Ying 等。 - 2020 - Trophic structure and functional diversity reveal .pdf:C\:\\Users\\Leslie_Ying\\Zotero\\storage\\CMDLQX92\\Ying 等。 - 2020 - Trophic structure and functional diversity reveal .pdf:application/pdf}
 }
-
-
